--- a/requirements.txt
+++ b/requirements.txt
@@ -1,90 +1,366 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
-# platform: win-64
-asttokens=2.4.1=pyhd8ed1ab_0
-backcall=0.2.0=pyh9f0ad1d_0
-ca-certificates=2023.11.17=h56e8100_0
-certifi=2022.12.7=pypi_0
-charset-normalizer=2.1.1=pypi_0
-colorama=0.4.6=pyhd8ed1ab_0
-comm=0.2.1=pyhd8ed1ab_0
-contourpy=1.1.1=pypi_0
-cycler=0.12.1=pypi_0
-debugpy=1.6.7=py38hd77b12b_0
-decorator=5.1.1=pyhd8ed1ab_0
-executing=2.0.1=pyhd8ed1ab_0
-filelock=3.9.0=pypi_0
-fonttools=4.47.2=pypi_0
-fsspec=2023.4.0=pypi_0
-hub-sdk=0.0.3=pypi_0
-idna=3.4=pypi_0
-importlib-metadata=7.0.1=pyha770c72_0
-importlib-resources=6.1.1=pypi_0
-importlib_metadata=7.0.1=hd8ed1ab_0
-ipykernel=6.28.0=pyha63f2e9_0
-ipython=8.12.0=pyh08f2357_0
-jedi=0.19.1=pyhd8ed1ab_0
-jinja2=3.1.2=pypi_0
-jupyter_client=8.6.0=pyhd8ed1ab_0
-jupyter_core=4.12.0=py38haa244fe_0
-kiwisolver=1.4.5=pypi_0
-libffi=3.4.4=hd77b12b_0
-libsodium=1.0.18=h8d14728_1
-markupsafe=2.1.3=pypi_0
-matplotlib=3.7.4=pypi_0
-matplotlib-inline=0.1.6=pyhd8ed1ab_0
-mpmath=1.3.0=pypi_0
-nest-asyncio=1.5.8=pyhd8ed1ab_0
-networkx=3.0=pypi_0
-numpy=1.24.1=pypi_0
-opencv-python=4.9.0.80=pypi_0
-openssl=3.0.12=h2bbff1b_0
-packaging=23.2=pyhd8ed1ab_0
-pandas=2.0.3=pypi_0
-parso=0.8.3=pyhd8ed1ab_0
-pickleshare=0.7.5=py_1003
-pillow=10.2.0=pypi_0
-pip=23.3.1=py38haa95532_0
-prompt-toolkit=3.0.42=pyha770c72_0
-prompt_toolkit=3.0.42=hd8ed1ab_0
-psutil=5.9.7=pypi_0
-pure_eval=0.2.2=pyhd8ed1ab_0
-py-cpuinfo=9.0.0=pypi_0
-pyarrow=14.0.2=pypi_0
-pygments=2.17.2=pyhd8ed1ab_0
-pyparsing=3.1.1=pypi_0
-python=3.8.18=h1aa4202_0
-python-dateutil=2.8.2=pyhd8ed1ab_0
-python-dotenv=1.0.0=pypi_0
-python-magic=0.4.27=pypi_0
-python_abi=3.8=2_cp38
-pytz=2023.3.post1=pypi_0
-pywin32=227=py38h294d835_1
-pyyaml=6.0.1=pypi_0
-pyzmq=25.1.0=py38hd77b12b_0
-requests=2.28.1=pypi_0
-scipy=1.10.1=pypi_0
-seaborn=0.13.1=pypi_0
-setuptools=68.2.2=py38haa95532_0
-six=1.16.0=pyh6c4a22f_0
-sqlite=3.41.2=h2bbff1b_0
-stack_data=0.6.2=pyhd8ed1ab_0
-sympy=1.12=pypi_0
-thop=0.1.1-2209072238=pypi_0
-torch=2.1.2+cu118=pypi_0
-torchaudio=2.1.2+cu118=pypi_0
-torchvision=0.16.2+cu118=pypi_0
-tornado=6.2=py38h294d835_0
-tqdm=4.66.1=pypi_0
-traitlets=5.14.1=pyhd8ed1ab_0
-typing-extensions=4.4.0=pypi_0
-typing_extensions=4.9.0=pyha770c72_0
-tzdata=2023.4=pypi_0
-ultralytics=8.1.0=pypi_0
-urllib3=1.26.13=pypi_0
-vc=14.2=h21ff451_1
-vs2015_runtime=14.27.29016=h5e58377_2
-wcwidth=0.2.13=pyhd8ed1ab_0
-wheel=0.41.2=py38haa95532_0
-zeromq=4.3.4=h0e60522_1
-zipp=3.17.0=pyhd8ed1ab_0
+# platform: linux-64
+# created-by: conda 24.9.1
+_libgcc_mutex=0.1=conda_forge
+_openmp_mutex=4.5=3_kmp_llvm
+alsa-lib=1.2.8=h166bdaf_0
+anyio=4.9.0=pyh29332c3_0
+aom=3.5.0=h27087fc_0
+argon2-cffi=23.1.0=pyhd8ed1ab_1
+argon2-cffi-bindings=21.2.0=py310ha75aee5_5
+arrow=1.3.0=pyhd8ed1ab_1
+asttokens=3.0.0=pyhd8ed1ab_1
+async-lru=2.0.5=pyh29332c3_0
+attr=2.5.1=h166bdaf_1
+attrs=25.3.0=pyh71513ae_0
+babel=2.17.0=pyhd8ed1ab_0
+beautifulsoup4=4.13.3=pyha770c72_0
+blas=1.0=mkl
+bleach=6.2.0=pyh29332c3_4
+bleach-with-css=6.2.0=h82add2a_4
+brotli=1.1.0=hb9d3cd8_2
+brotli-bin=1.1.0=hb9d3cd8_2
+brotli-python=1.1.0=py310hf71b8c6_2
+bzip2=1.0.8=h4bc722e_7
+c-ares=1.34.4=hb9d3cd8_0
+ca-certificates=2025.1.31=hbcca054_0
+cached-property=1.5.2=hd8ed1ab_1
+cached_property=1.5.2=pyha770c72_1
+cairo=1.16.0=ha61ee94_1012
+certifi=2025.1.31=pyhd8ed1ab_0
+cffi=1.17.1=py310h8deb56e_0
+charset-normalizer=3.4.1=pyhd8ed1ab_0
+colorama=0.4.6=pyhd8ed1ab_1
+comm=0.2.2=pyhd8ed1ab_1
+contourpy=1.3.1=py310h3788b33_0
+cramjam=2.9.1=pypi_0
+cuda-cudart=11.8.89=0
+cuda-cupti=11.8.87=0
+cuda-libraries=11.8.0=0
+cuda-nvrtc=11.8.89=0
+cuda-nvtx=11.8.86=0
+cuda-runtime=11.8.0=0
+cuda-version=12.8=3
+cycler=0.12.1=pyhd8ed1ab_1
+dbus=1.13.6=h5008d03_3
+debugpy=1.8.13=py310hf71b8c6_0
+decorator=5.2.1=pyhd8ed1ab_0
+defusedxml=0.7.1=pyhd8ed1ab_0
+exceptiongroup=1.2.2=pyhd8ed1ab_1
+executing=2.1.0=pyhd8ed1ab_1
+expat=2.7.0=h5888daf_0
+fastparquet=2024.11.0=pypi_0
+ffmpeg=4.4.2=gpl_h8dda1f0_112
+fftw=3.3.10=nompi_hf1063bd_110
+filelock=3.18.0=pyhd8ed1ab_0
+font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+font-ttf-inconsolata=3.000=h77eed37_0
+font-ttf-source-code-pro=2.038=h77eed37_0
+font-ttf-ubuntu=0.83=h77eed37_3
+fontconfig=2.15.0=h7e30c49_1
+fonts-conda-ecosystem=1=0
+fonts-conda-forge=1=0
+fonttools=4.56.0=py310h89163eb_0
+fqdn=1.5.1=pyhd8ed1ab_1
+freeglut=3.2.2=h9c3ff4c_1
+freetype=2.13.3=h48d6fc4_0
+fsspec=2025.3.2=pypi_0
+gettext=0.23.1=h5888daf_0
+gettext-tools=0.23.1=h5888daf_0
+giflib=5.2.2=hd590300_0
+glib=2.84.0=h07242d1_0
+glib-tools=2.84.0=h4833e2c_0
+gmp=6.3.0=hac33072_2
+gmpy2=2.1.5=py310he8512ff_3
+gnutls=3.7.9=hb077bed_0
+graphite2=1.3.13=h59595ed_1003
+gst-plugins-base=1.21.3=h4243ec0_1
+gstreamer=1.21.3=h25f0c4b_1
+gstreamer-orc=0.4.41=h17648ed_0
+h11=0.14.0=pyhd8ed1ab_1
+h2=4.2.0=pyhd8ed1ab_0
+harfbuzz=5.3.0=h418a68e_0
+hdf5=1.12.2=nompi_h4df4325_101
+hpack=4.1.0=pyhd8ed1ab_0
+httpcore=1.0.7=pyh29332c3_1
+httpx=0.28.1=pyhd8ed1ab_0
+hyperframe=6.1.0=pyhd8ed1ab_0
+icu=70.1=h27087fc_0
+idna=3.10=pyhd8ed1ab_1
+importlib-metadata=8.6.1=pyha770c72_0
+importlib_resources=6.5.2=pyhd8ed1ab_0
+ipykernel=6.29.5=pyh3099207_0
+ipython=8.34.0=pyh907856f_0
+ipywidgets=8.1.5=pyhd8ed1ab_1
+isoduration=20.11.0=pyhd8ed1ab_1
+jack=1.9.22=h11f4161_0
+jasper=2.0.33=h0ff4b12_1
+jedi=0.19.2=pyhd8ed1ab_1
+jinja2=3.1.6=pyhd8ed1ab_0
+jpeg=9e=h166bdaf_2
+json5=0.10.0=pyhd8ed1ab_1
+jsonpointer=3.0.0=py310hff52083_1
+jsonschema=4.23.0=pyhd8ed1ab_1
+jsonschema-specifications=2024.10.1=pyhd8ed1ab_1
+jsonschema-with-format-nongpl=4.23.0=hd8ed1ab_1
+jupyter=1.1.1=pyhd8ed1ab_1
+jupyter-lsp=2.2.5=pyhd8ed1ab_1
+jupyter_client=8.6.3=pyhd8ed1ab_1
+jupyter_console=6.6.3=pyhd8ed1ab_1
+jupyter_core=5.7.2=pyh31011fe_1
+jupyter_events=0.12.0=pyh29332c3_0
+jupyter_server=2.15.0=pyhd8ed1ab_0
+jupyter_server_terminals=0.5.3=pyhd8ed1ab_1
+jupyterlab=4.3.6=pyhd8ed1ab_0
+jupyterlab_pygments=0.3.0=pyhd8ed1ab_2
+jupyterlab_server=2.27.3=pyhd8ed1ab_1
+jupyterlab_widgets=3.0.13=pyhd8ed1ab_1
+kaggle=1.7.4.2=pypi_0
+keyutils=1.6.1=h166bdaf_0
+kiwisolver=1.4.7=py310h3788b33_0
+krb5=1.20.1=h81ceb04_0
+lame=3.100=h166bdaf_1003
+lcms2=2.14=h6ed2654_0
+ld_impl_linux-64=2.43=h712a8e2_4
+lerc=4.0.0=h27087fc_0
+libaec=1.1.3=h59595ed_0
+libasprintf=0.23.1=h8e693c7_0
+libasprintf-devel=0.23.1=h8e693c7_0
+libblas=3.9.0=16_linux64_mkl
+libbrotlicommon=1.1.0=hb9d3cd8_2
+libbrotlidec=1.1.0=hb9d3cd8_2
+libbrotlienc=1.1.0=hb9d3cd8_2
+libcap=2.67=he9d0100_0
+libcblas=3.9.0=16_linux64_mkl
+libclang=15.0.7=default_h127d8a8_5
+libclang13=15.0.7=default_h5d6823c_5
+libcublas=11.11.3.6=0
+libcufft=10.9.0.58=0
+libcufile=1.13.1.3=0
+libcups=2.3.3=h36d4200_3
+libcurand=10.3.9.90=0
+libcurl=8.1.2=h409715c_0
+libcusolver=11.4.1.48=0
+libcusparse=11.7.5.86=0
+libdb=6.2.32=h9c3ff4c_0
+libdeflate=1.14=h166bdaf_0
+libdrm=2.4.124=hb9d3cd8_0
+libedit=3.1.20250104=pl5321h7949ede_0
+libev=4.33=hd590300_2
+libevent=2.1.10=h28343ad_4
+libexpat=2.7.0=h5888daf_0
+libffi=3.4.6=h2dba641_1
+libflac=1.4.3=h59595ed_0
+libgcc=14.2.0=h767d61c_2
+libgcc-ng=14.2.0=h69a702a_2
+libgcrypt=1.11.0=ha770c72_2
+libgcrypt-devel=1.11.0=hb9d3cd8_2
+libgcrypt-lib=1.11.0=hb9d3cd8_2
+libgcrypt-tools=1.11.0=hb9d3cd8_2
+libgettextpo=0.23.1=h5888daf_0
+libgettextpo-devel=0.23.1=h5888daf_0
+libgfortran=14.2.0=h69a702a_2
+libgfortran-ng=14.2.0=h69a702a_2
+libgfortran5=14.2.0=hf1ad2bd_2
+libglib=2.84.0=h2ff4ddf_0
+libglu=9.0.0=he1b5a44_1001
+libgomp=14.2.0=h767d61c_2
+libgpg-error=1.51=hbd13f7d_1
+libhwloc=2.9.1=hd6dc26d_0
+libiconv=1.18=h4ce23a2_1
+libidn2=2.3.8=ha4ef2c3_0
+libjpeg-turbo=2.0.0=h9bf148f_0
+liblapack=3.9.0=16_linux64_mkl
+liblapacke=3.9.0=16_linux64_mkl
+libllvm15=15.0.7=hadd5161_1
+libltdl=2.4.3a=h5888daf_0
+liblzma=5.6.4=hb9d3cd8_0
+liblzma-devel=5.6.4=hb9d3cd8_0
+libnghttp2=1.58.0=h47da74e_0
+libnpp=11.8.0.86=0
+libnsl=2.0.1=hd590300_0
+libnvjpeg=11.9.0.86=0
+libogg=1.3.5=h4ab18f5_0
+libopencv=4.6.0=py310hd0265ad_4
+libopus=1.3.1=h7f98852_1
+libpciaccess=0.18=hd590300_0
+libpng=1.6.47=h943b412_0
+libpq=15.3=hbcd7760_1
+libprotobuf=3.21.12=hfc55251_2
+libsndfile=1.2.2=hc60ed4a_1
+libsodium=1.0.18=h36c2ea0_1
+libsqlite=3.49.1=hee588c1_2
+libssh2=1.11.0=h0841786_0
+libstdcxx=14.2.0=h8f9b012_2
+libstdcxx-ng=14.2.0=h4852527_2
+libsystemd0=253=h8c4010b_1
+libtasn1=4.20.0=hb9d3cd8_0
+libtiff=4.4.0=h82bc61c_5
+libtool=2.5.4=h5888daf_0
+libudev1=253=h0b41bf4_1
+libunistring=0.9.10=h7f98852_0
+libuuid=2.38.1=h0b41bf4_0
+libva=2.18.0=h0b41bf4_0
+libvorbis=1.3.7=h9c3ff4c_0
+libvpx=1.11.0=h9c3ff4c_3
+libwebp=1.2.4=h522a892_0
+libwebp-base=1.2.4=h166bdaf_0
+libxcb=1.13=h7f98852_1004
+libxcrypt=4.4.36=hd590300_1
+libxkbcommon=1.5.0=h79f4944_1
+libxml2=2.10.3=hca2bb57_4
+libzlib=1.3.1=hb9d3cd8_2
+llvm-openmp=15.0.7=h0cdce71_0
+lz4-c=1.9.4=hcb278e6_0
+markupsafe=3.0.2=py310h89163eb_1
+matplotlib-base=3.10.1=py310h68603db_0
+matplotlib-inline=0.1.7=pyhd8ed1ab_1
+mistune=3.1.3=pyh29332c3_0
+mkl=2022.2.1=h84fe81f_16997
+mpc=1.3.1=h24ddda3_1
+mpfr=4.2.1=h90cbb55_3
+mpg123=1.32.9=hc50e24c_0
+mpmath=1.3.0=pyhd8ed1ab_1
+munkres=1.1.4=pyh9f0ad1d_0
+mysql-common=8.0.33=hf1915f5_6
+mysql-libs=8.0.33=hca2cd23_6
+nbclient=0.10.2=pyhd8ed1ab_0
+nbconvert-core=7.16.6=pyh29332c3_0
+nbformat=5.10.4=pyhd8ed1ab_1
+ncurses=6.5=h2d0b736_3
+nest-asyncio=1.6.0=pyhd8ed1ab_1
+nettle=3.9.1=h7ab15ed_0
+networkx=3.4.2=pyh267e887_2
+notebook=7.3.3=pyhd8ed1ab_0
+notebook-shim=0.2.4=pyhd8ed1ab_1
+nspr=4.36=h5888daf_0
+nss=3.110=h159eef7_0
+numpy=1.26.4=py310hb13e2d6_0
+opencv=4.6.0=py310hff52083_4
+openh264=2.3.1=hcb278e6_2
+openjpeg=2.5.0=h7d73246_1
+openssl=3.1.8=h7b32b05_0
+overrides=7.7.0=pyhd8ed1ab_1
+p11-kit=0.24.1=hc5aa10d_0
+packaging=24.2=pyhd8ed1ab_2
+pandas=2.2.3=py310h5eaa309_1
+pandocfilters=1.5.0=pyhd8ed1ab_0
+parso=0.8.4=pyhd8ed1ab_1
+patsy=1.0.1=pyhd8ed1ab_1
+pcre2=10.44=hba22ea6_2
+pexpect=4.9.0=pyhd8ed1ab_1
+pickleshare=0.7.5=pyhd8ed1ab_1004
+pillow=9.2.0=py310h454ad03_3
+pip=25.0.1=pyh8b19718_0
+pixman=0.44.2=h29eaf8c_0
+pkgutil-resolve-name=1.3.10=pyhd8ed1ab_2
+platformdirs=4.3.7=pyh29332c3_0
+prometheus_client=0.21.1=pyhd8ed1ab_0
+prompt-toolkit=3.0.50=pyha770c72_0
+prompt_toolkit=3.0.50=hd8ed1ab_0
+protobuf=6.30.2=pypi_0
+psutil=7.0.0=py310ha75aee5_0
+pthread-stubs=0.4=hb9d3cd8_1002
+ptyprocess=0.7.0=pyhd8ed1ab_1
+pulseaudio=16.1=hcb278e6_3
+pulseaudio-client=16.1=h5195f5e_3
+pulseaudio-daemon=16.1=ha8d29e2_3
+pure_eval=0.2.3=pyhd8ed1ab_1
+py-cpuinfo=9.0.0=pyhd8ed1ab_1
+py-opencv=4.6.0=py310hfdc917e_4
+pyarrow=19.0.1=pypi_0
+pycparser=2.22=pyh29332c3_1
+pygments=2.19.1=pyhd8ed1ab_0
+pyparsing=3.2.3=pyhd8ed1ab_1
+pysocks=1.7.1=pyha55dd90_7
+python=3.10.13=hd12c33a_0_cpython
+python-dateutil=2.9.0.post0=pyhff2d567_1
+python-fastjsonschema=2.21.1=pyhd8ed1ab_0
+python-json-logger=2.0.7=pyhd8ed1ab_0
+python-slugify=8.0.4=pypi_0
+python-tzdata=2025.2=pyhd8ed1ab_0
+python_abi=3.10=6_cp310
+pytorch=2.5.1=py3.10_cuda11.8_cudnn9.1.0_0
+pytorch-cuda=11.8=h7e8668a_6
+pytorch-mutex=1.0=cuda
+pytz=2024.1=pyhd8ed1ab_0
+pyyaml=6.0.2=py310h89163eb_2
+pyzmq=26.2.0=py310h71f11fc_1
+qhull=2020.2=h434a139_5
+qt-main=5.15.6=hf6cd601_5
+readline=8.2=h8c095d6_2
+referencing=0.36.2=pyh29332c3_0
+requests=2.32.3=pyhd8ed1ab_1
+rfc3339-validator=0.1.4=pyhd8ed1ab_1
+rfc3986-validator=0.1.1=pyh9f0ad1d_0
+rpds-py=0.24.0=py310hc1293b2_0
+scipy=1.15.2=py310h1d65ade_0
+seaborn=0.13.2=hd8ed1ab_3
+seaborn-base=0.13.2=pyhd8ed1ab_3
+send2trash=1.8.3=pyh0d859eb_1
+setuptools=75.8.2=pyhff2d567_0
+six=1.17.0=pyhd8ed1ab_0
+sniffio=1.3.1=pyhd8ed1ab_1
+soupsieve=2.5=pyhd8ed1ab_1
+stack_data=0.6.3=pyhd8ed1ab_1
+statsmodels=0.14.4=py310hf462985_0
+svt-av1=1.4.1=hcb278e6_0
+sympy=1.13.3=pypyh2585a3b_103
+tbb=2021.9.0=hf52228f_0
+terminado=0.18.1=pyh0d859eb_0
+text-unidecode=1.3=pypi_0
+tinycss2=1.4.0=pyhd8ed1ab_0
+tk=8.6.13=noxft_h4845f30_101
+tomli=2.2.1=pyhd8ed1ab_1
+torchtriton=3.1.0=py310
+torchvision=0.20.1=py310_cu118
+tornado=6.4.2=py310ha75aee5_0
+tqdm=4.67.1=pyhd8ed1ab_1
+traitlets=5.14.3=pyhd8ed1ab_1
+types-python-dateutil=2.9.0.20241206=pyhd8ed1ab_0
+typing-extensions=4.13.0=h9fa5a19_1
+typing_extensions=4.13.0=pyh29332c3_1
+typing_utils=0.1.0=pyhd8ed1ab_1
+tzdata=2025b=h78e105d_0
+ultralytics=8.3.100=pyh2a12c56_0
+unicodedata2=16.0.0=py310ha75aee5_0
+uri-template=1.3.0=pyhd8ed1ab_1
+urllib3=2.3.0=pyhd8ed1ab_0
+wcwidth=0.2.13=pyhd8ed1ab_1
+webcolors=24.11.1=pyhd8ed1ab_0
+webencodings=0.5.1=pyhd8ed1ab_3
+websocket-client=1.8.0=pyhd8ed1ab_1
+wheel=0.45.1=pyhd8ed1ab_1
+widgetsnbextension=4.0.13=pyhd8ed1ab_1
+x264=1!164.3095=h166bdaf_2
+x265=3.5=h924138e_3
+xcb-util=0.4.0=h516909a_0
+xcb-util-image=0.4.0=h166bdaf_0
+xcb-util-keysyms=0.4.0=h516909a_0
+xcb-util-renderutil=0.3.9=h166bdaf_0
+xcb-util-wm=0.4.1=h516909a_0
+xkeyboard-config=2.38=h0b41bf4_0
+xorg-fixesproto=5.0=hb9d3cd8_1003
+xorg-inputproto=2.3.2=hb9d3cd8_1003
+xorg-kbproto=1.0.7=hb9d3cd8_1003
+xorg-libice=1.1.2=hb9d3cd8_0
+xorg-libsm=1.2.6=he73a12e_0
+xorg-libx11=1.8.4=h0b41bf4_0
+xorg-libxau=1.0.12=hb9d3cd8_0
+xorg-libxdmcp=1.1.5=hb9d3cd8_0
+xorg-libxext=1.3.4=h0b41bf4_2
+xorg-libxfixes=5.0.3=h7f98852_1004
+xorg-libxi=1.7.10=h7f98852_0
+xorg-libxrender=0.9.10=h7f98852_1003
+xorg-renderproto=0.11.1=hb9d3cd8_1003
+xorg-xextproto=7.3.0=hb9d3cd8_1004
+xorg-xproto=7.0.31=hb9d3cd8_1008
+xz=5.6.4=hbcc6ac9_0
+xz-gpl-tools=5.6.4=hbcc6ac9_0
+xz-tools=5.6.4=hb9d3cd8_0
+yaml=0.2.5=h7f98852_2
+zeromq=4.3.5=h59595ed_1
+zipp=3.21.0=pyhd8ed1ab_1
+zstandard=0.23.0=py310ha75aee5_1
+zstd=1.5.7=hb8e6e7a_2
